--- a/Task Management System/Authenticating with JWT/task-info.yaml
+++ b/Task Management System/Authenticating with JWT/task-info.yaml
@@ -993,15 +993,6 @@ files:
           CREATED,
       }
     learner_created: true
-  - name: src/taskmanagement/configs/RsaKeysConfig.java
-    visible: true
-    learner_created: true
-  - name: src/taskmanagement/accounts/TokenResponseDTO.java
-    visible: true
-    learner_created: true
-feedback_link: https://hyperskill.org/projects/423/stages/2461/implement#comment
+feedback_link: https://hyperskill.org/learn/step/40330#comment
 status: Solved
-feedback:
-  message: Congratulations!
-  time: "Mon, 26 Feb 2024 06:08:02 UTC"
-record: 3
+record: 7
