--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/34355/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Sun, 25 Feb 2024 16:10:47 UTC"
+update_date: "Tue, 27 Feb 2024 13:45:53 UTC"
 stages:
   - id: 2459
     step: 40328
@@ -19,7 +19,7 @@ stages:
     is_completed: true
   - id: 2463
     step: 40332
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Modulo division
